--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "resolveJsonModule": true,     // Permitir importação de arquivos JSON
     "strict": true,
     "noEmit": true,                 // Habilitar todas as verificações de tipo estritas
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
   },
   "include": ["src/**/*"],         // Incluir todos os arquivos no diretório 'src'
   "exclude": ["node_modules", "./dist"],      // Excluir 'node_modules'
