--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fastify-type-provider-zod": "^4.0.2",
     "nodemon": "^3.1.7",
     "prisma": "^5.22.0",
+    "resend": "^4.1.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
